se agrega correciones dia miercoles

--- a/src/app/components/bremsen/bremsen.component.html
+++ b/src/app/components/bremsen/bremsen.component.html
@@ -1,43 +1,149 @@
-<div class=" bg-bremsen container-fluid" > <!-- pasar el css-->
+<div class=" bg-bremsen container-fluid">
+    <!-- pasar el css-->
     <div class="container">
         <div class="pad-50">&nbsp;</div>
-            <div class="row">
-                    <div class="col-md-6 blanco" style="padding:5%;">
+        <div class="row">
+            <div class="col-md-6 blanco" style="padding:5%;">
 
-                        <div class="col-md-12">
-                        <h1><b style="color:#1e1e1e !important;">POR QUÉ</b><br><b style="color: #e00034;">BREMSEN</b></h1>
-                        <p style="color: #1e1e1e; line-height: 28px; padding-bottom: 44px;">Entendemos el valor que tiene tu tiempo y por eso, hemos diseñado un servicio integral con el cual ya no pierdes tiempo al cambiar tus neumáticos. Desde ahora dedica el tiempo a lo que realmente quieres, ¡nosotros nos encargamos del resto!</p>
-                       <br>
-                        <i>Tomás Zuñiga - Cristian Ogaz</i>
-                        </div>
-                    </div>
+                <div class="col-md-12">
+                    <h1>
+                        <b style="color:#1e1e1e !important;">POR QUÉ</b>
+                        <br>
+                        <b style="color: #e00034;">BREMSEN</b>
 
-                    <div class="col-md-6 img-bremsen">
-                       &nbsp;
+                    </h1>
+                    <p style="color: #1e1e1e; line-height: 28px; padding-bottom: 44px;"><b>Entendemos el valor que tiene tu tiempo y por eso, hemos diseñado un servicio integral con el cual ya
+                        no pierdes tiempo al cambiar tus neumáticos. Desde ahora dedica el tiempo a lo que realmente quieres,
+                        ¡nosotros nos encargamos del resto!</b>
+                    </p>
+                    <br>
+                    <i style="color:#e00034;">Tomás Zuñiga - Cristian Ogaz</i>
+                </div>
+            </div>
 
-                    </div>
-            </div><!--row-->
-          <div class="pad-50">&nbsp;</div>
-          <div class="pad-10">&nbsp;</div>
-          <div class="pad-10">&nbsp;</div>
+            <div class="col-md-6 img-bremsen">
+                &nbsp;
+
+            </div>
+        </div>
+        <!--row-->
+        <div class="pad-50">&nbsp;</div>
+        <div class="pad-10">&nbsp;</div>
+        <div class="pad-10">&nbsp;</div>
     </div>
 </div>
 
 
 
 <div class="container">
-            <div class="pad-50">&nbsp;</div>
+    <div class="pad-50">&nbsp;</div>
 
-          <!-- Brand Logo Carousel Start-->
-          <div id="carousel" class="owl-carousel nxt">
-            <div class="item text-center"><img src="assets/image/testimonio-01.jpg" alt="" class="img-responsive" /></div>
-            <div class="item text-center"><img src="assets/image/testimonio-02.jpg" alt="" class="img-responsive" /></div>
-            <div class="item text-center"><img src="assets/image/testimonio-03.jpg" alt="" class="img-responsive" /></div>
-            <div class="item text-center"><img src="assets/image/testimonio-03.jpg" alt="" class="img-responsive" /></div>
 
-            <div class="item text-center"><img src="assets/image/testimonio-04.jpg" alt="" class="img-responsive" /></div>
-            <div class="item text-center"><img src="assets/image/testimonio-05.jpg" alt="" class="img-responsive" /></div>
-            <div class="item text-center"><img src="assets/image/testimonio-06.jpg" alt="" class="img-responsive" /></div>
-          </div>
 
-  </div>
+
+    <!-- Brand Logo Carousel Start-->
+    <div id="carousel" class="owl-carousel nxt">
+        <div class="item text-center">
+            <img src="image/testimonio-01.jpg" alt="" class="img-responsive" />
+        </div>
+        <div class="item text-center">
+            <img src="image/testimonio-02.jpg" alt="" class="img-responsive" />
+        </div>
+        <div class="item text-center">
+            <img src="image/testimonio-03.jpg" alt="" class="img-responsive" />
+        </div>
+        <div class="item text-center">
+            <img src="image/testimonio-03.jpg" alt="" class="img-responsive" />
+        </div>
+
+        <div class="item text-center">
+            <img src="image/testimonio-04.jpg" alt="" class="img-responsive" />
+        </div>
+        <div class="item text-center">
+            <img src="image/testimonio-05.jpg" alt="" class="img-responsive" />
+        </div>
+        <div class="item text-center">
+            <img src="image/testimonio-06.jpg" alt="" class="img-responsive" />
+        </div>
+        <div class="item text-center">
+            <img src="image/testimonio-07.jpg" alt="" class="img-responsive" />
+            </div>
+    </div>
+
+</div>
+
+<div class="pad-50">&nbsp;</div>
+
+
+
+
+
+<div class="container-fluid" style=" padding: 40px 0px; background: #1e1e1e; margin-bottom:-80px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-7">
+                <div class="pad50"></div>
+
+                <h3 class="subtitle" style="color: #fff !important;">Contáctanos</h3>
+                <form class="form-horizontal">
+                    <fieldset>
+
+                        <div class="form-group required">
+                            <div class="col-md-10 col-sm-9">
+                                <input type="text" name="name" value="" id="input-name" class="form-control form-controlContacto" placeholder="Nombre" />
+                            </div>
+                        </div>
+                        <div class="form-group required">
+                            <div class="col-md-10 col-sm-9">
+                                <input type="text" name="email" value="" id="input-email" class="form-control form-controlContacto" placeholder="Email" />
+                            </div>
+                        </div>
+                        <div class="form-group required">
+                            <div class="col-md-10 col-sm-9">
+                                <textarea name="enquiry" rows="4" id="input-enquiry" class="form-control form-controlContacto" placeholder="Mensaje"></textarea>
+                            </div>
+                        </div>
+                    </fieldset>
+                    <div class="buttons">
+                        <div class="pull-right" style="padding-right: 95px;">
+                            <input class="btn btn-default" type="submit" value="Contáctanos" />
+                        </div>
+                    </div>
+                </form>
+
+
+            </div>
+
+            <div class="col-md-3">
+                <div class="pad-10">&nbsp;</div>
+                <div class="pad-10">&nbsp;</div>
+                <h3 style="color:#fff !important;">Dirección</h3>
+                <h3 style="color:#fff !important;">Email</h3>
+                <h3 style="color:#fff !important;">Teléfono</h3>
+
+
+
+            </div>
+
+            <div class="col-md-1">&nbsp;</div>
+
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+<style>
+    .form-controlContacto {
+        background-color: #1e1e1e !important;
+        border: none;
+        border-bottom: 2px solid #fff !important;
+        border-radius: 0px !important;
+    }
+</style>
