--- a/src/app/components/categoria-filtrada/categoria-filtrada.component.html
+++ b/src/app/components/categoria-filtrada/categoria-filtrada.component.html
@@ -13,7 +13,9 @@
       <div class="row">
         <!--Left Part Start -->
         <aside id="column-left" class="col-sm-3 hidden-xs">
-          <div class="pad"></div>
+          <div class="pad-5">&nbsp;</div>
+          <h3><b>FILTRAR POR</b></h3>
+          <br>
           <h3 class="subtitle">Marca</h3>
            <div class="box-category">
             <div class="radio">
@@ -71,7 +73,7 @@
 
         <!--Middle Part Start-->
         <div id="content" class="col-sm-9">
-          <h1 class="title">Para: {{param1}} {{param2}} {{param3}}</h1>
+          <h3><b>Para: {{param1}} {{param2}} {{param3}}</b></h3>
 
         <!-- 1 -->
 <div class="loader loader--style1" title="0" *ngIf="mostrarLoading">
