--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -26,7 +26,7 @@
             </ul>
           </div>
           <div class="column col-lg-31   col-md-3 col-sm-3 col-xs-12">
-               <img alt="" class="img-responsive" src="assets/image/webpay-456x200.png">
+               <img alt="" class="img-responsive responsivo" src="assets/image/webpay-456x200.png">
           </div>
 
         </div>
