--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -76,46 +76,43 @@ Múltiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
       </div>
     </div>
     <br/><br/>
-</div>
-
-</div>
-
-
-<div class="container-fluid" style="background: #f2f2f2; padding: 25px 0px;">
-   <div class="container" >
-    <div class="row">
-        <div class="col-md-12 text-center">
-          <div class="pad50"></div>
-
-          <h3>Regístrate para recibir ofertas personalizadas</h3>
-          <p>  <button type="button" (click)="btnRegistro()" class="btn btn-primary btn-lg">Crear Cuenta</button></p>
-          <div class="pad50"></div>
-        </div>
+    <div class="col-md-12 text-center">
+      <div class="pad50"></div>
+      <p>
+        <button type="button" (click)="btnRegistro()" class="btn btn-default btn-lg">Crear Cuenta</button>
+      </p>
+      <div class="pad-15"></div>
     </div>
-  </div>
 </div>
+
+</div>
+
+
 
 
 <div class="container">
-    <div class="row">
-      <div class="pad-50">&nbsp;</div>
-          <div class="col-md-12 text-center"><h1 class="title">Nuestro servicios</h1></div>
-        <div class="col-md-4 text-center">
-            <img class="img-responsive center-block" src="assets/image/pasos-buscar-01.png">
-            <h3>Busca tus neumáticos</h3>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-        </div>
-        <div class="col-md-4 text-center">
-            <img class="img-responsive center-block" src="assets/image/pasos-instalacion-02.png">
-            <h3>Elige instalación</h3>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-        </div>
-        <div class="col-md-4 text-center">
-            <img class="img-responsive center-block" src="assets/image/pasos-pagar-03.png">
-              <h3>Pago online</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-        </div>
+  <div class="row">
+    <div class="pad-50">&nbsp;</div>
+    <div class="col-md-12 text-center">
+      <h1 class="title">Nuestro servicios</h1>
+      <br>
     </div>
+    <div class="col-md-4 text-center">
+      <img class="img-responsive center-block" src="assets/image/pasos-buscar-01.png">
+      <h3>Busca tus neumáticos</h3>
+      <p>Encuentra tus neumáticos por modelo de auto o medida, filtrando de forma sencilla y rapida</p>
+    </div>
+    <div class="col-md-4 text-center">
+      <img class="img-responsive center-block" src="assets/image/pasos-instalacion-02.png">
+      <h3>Elige instalación</h3>
+      <p>Selecciona una de las cuatro formas de instalación o despacho que tenemos disponibles </p>
+    </div>
+    <div class="col-md-4 text-center">
+      <img class="img-responsive center-block" src="assets/image/pasos-pagar-03.png">
+      <h3>Pago online</h3>
+      <p>Finaliza tu compra pagando de forma segura a través de Webpay o transferencia bancaria</p>
+    </div>
+  </div>
 </div>
 
 
