--- a/src/styles.css
+++ b/src/styles.css
@@ -37,13 +37,14 @@ svg rect{
 }
 .ng-autocomplete-dropdown .ng-autocomplete-inputs input {
     width: 100%;
-    padding: 6px 20px;
+    padding: 6px 14px;
     font-family: Arial;
     font-weight: normal;
     outline: none !important;
-    font-size: 15px;
-    height: 56px;
+    font-size: 13px;
+    height: 40px;
     border: 1px solid #e0e0e0;
+    border-radius: 4px;
 }
 
 .ng-autocomplete-dropdown .ng-autocomplete-placeholder {
@@ -71,18 +72,18 @@ svg rect{
 .ng-autocomplete-dropdown .ng-dropdown .dropdown-item {
     width: 100%;
     cursor: pointer;
-    padding: 18px 20px;
+    padding: 17px 14px;
     font-family: Arial;
     font-weight: normal;
     font-size: 15px;
-    height: 56px;
+    height: 44px;
     background-color: #ffffff;
 }
 .ng-autocomplete-dropdown .ng-dropdown .dropdown-item:nth-child(odd) {
     background-color: #efefef;
 }
 .ng-autocomplete-dropdown .ng-dropdown .dropdown-item.active {
-    background-color: #0099cc;
+    background-color: #e00d34;
     color: #fff !important;
 }
 
@@ -92,13 +93,12 @@ svg rect{
 
 .ng-autocomplete-dropdown-icon {
     display: block;
-    width: 56px;
+    width: 25px;
     text-align: center;
     position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
-    border-left: 1px solid #e0e0e0;
     cursor: pointer;
     z-index: 999;
     font-size: 12px;
@@ -116,9 +116,9 @@ svg rect{
     border-right: 7px solid transparent;
     border-top: 7px solid #000;
     position: absolute;
-    right: 21px;
+    right: 8px;
     z-index: 999;
-    top: 24px;
+    top: 19px;
 }
 
 .ng-autocomplete-dropdown-icon.open:after {
