se agregan paginas y se mejoran funcionalidades

--- a/src/app/components/carro/carro.component.html
+++ b/src/app/components/carro/carro.component.html
@@ -387,9 +387,10 @@
                 <tr>
                  <td></td>
                   <td  class="text-right">
-                  	<button type="button" class="btn btn-default btn-block">Comprar con mi cuenta</button><br>
-                   <a href="#"><small>¿Aun no tienes cuenta?</small></a><br>
-                   <button type="button" class="btn btn-primary btn-block">Comprar como visita</button></td>
+                  	<button type="button" class="btn btn-default btn-block" (click)="checking()">Continuar con tu pedido</button><br>
+                   <!--a href="#"><small>¿Aun no tienes cuenta?</small></a><br>
+                   <button type="button" class="btn btn-primary btn-block">Comprar como visita</button-->
+                  </td>
                 </tr>
               </table>
        </div>
