--- a/src/app/components/categoria-filtrada/categoria-filtrada.component.html
+++ b/src/app/components/categoria-filtrada/categoria-filtrada.component.html
@@ -256,8 +256,10 @@
                     </script>
 <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
                         <div class="modal-dialog modal-sm" role="document" >
-                          <div class="modal-content" style="padding-left: 5px;">
-                            <div class="modal-header"> <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>  </div>
-                            <h3>Producto agregado al carro</h3>                          </div>
+                          <div class="modal-content" style="padding-left: 8px;">
+                            <div class="modal-header"> <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" style="font-size: 33px; color: #fff !important;">×</span></button>  </div><br>
+                            <h3 style="color: #fff !important;">Producto agregado al carro</h3>
+                            <div class="pad-10">&nbsp;</div>
+                             </div>
                         </div>
                     </div>
