--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -110,8 +110,8 @@
         	<div class="col-md-1">&nbsp;</div>
 			<div class="col-md-2">
 					 <div id="search" class="input-group">
-					  <input id="filter_name" type="text" name="search" value="" placeholder="Search" class="form-control input-lg">
-					  <button type="button" class="button-search"><i class="fa fa-search"></i></button>
+					  <input id="filter_name" type="text" name="search" value="" placeholder="Search" class="form-control input-lg" [(ngModel)]="searchValue">
+					  <button type="button" class="button-search" (click)="inSearch()"><i class="fa fa-search"></i></button>
 					</div>
             </div>
     </div>
@@ -153,7 +153,7 @@
                     <table class="table  table-precio" style="font-size: 14px;">
                       <tbody>
                       <tr>
-                         
+
 
 
 
