--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -71,9 +71,9 @@
                   </div>
                   <div class="form-group required">
                     <label for="">Nueva contraseña</label>
-                    <input type="password" class="form-control" name="nueva1" id="nueva1" [(ngModel)]="cliente.password">
+                    <input type="password" class="form-control" name="nueva1" id="nueva1" [(ngModel)]="nueva1">
                   </div>
-                  
+
                   <div class="form-group required">
                     <label for="">Repetir nueva contraseña </label>
                     <input type="password" class="form-control" name="nueva2" id="nueva2" [(ngModel)]="nueva2">
@@ -86,6 +86,7 @@
         </div>
          <div *ngIf="estado" [ngClass] = "'success'"> Cliente fue agregado correctamente. </div>
         <div *ngIf="errorMessage" [ngClass] = "'error'"> {{errorMessage}} </div>
+        <div *ngIf="errorPass" [ngClass] = "'error'">{{errorMsg}}</div>
          </form>
         </div>
 
